# logxcontroll_v2

./: .gitignore  .valgrindrc  CMakeLists.txt  CMakeLists.txt.save  build.conf  logxcontroll-core  main.c  old.CMakeLists.txt  playground.c
arithmetic/: CMakeLists.txt  arithmetic.h  lxc_bool_gates.c  lxc_bool_gates.h
buildconfigs/: linux_pc_usual_dev_exec_full.conf
core/: TODO  accounting.c  accounting.h  build.c  build.h  debug.c  debug.h  errors  facet.c  facet.h  logxcontroll.c  logxcontroll.h  lxc.c  lxc.h  lxc_base_impl.h  lxc_execution.c  lxc_execution.h  platform.c  platform.h
core/builtins/: builtin.c  builtin.h  builtin_gate_cast.c  builtin_gate_cast.h  builtin_gate_switch.c  builtin_gate_switch.h  functional_wrapper.c  functional_wrapper.h  gate_generic.c  gate_generic.h
core/builtins/logic/: lxc_bool_gates.c  lxc_bool_gates.h
core/template/: unit.template
core/utils/: lock.h  lxc_utils.c  lxc_utils.h  pcre_util.c  pcre_util.h  rerunnable_thread.c  rerunnable_thread.h  utils.c  utils.h  worker_pool.c  worker_pool.h
doc/: DESIRED_TOPIC.md  build.txt  build_method.txt  build_on_platform.txt  testing.txt
experiment/: experiment.h  test_complex_op.c
experiment/usecases/: circuit_builder.c  circuit_test_utils.c  circuit_test_utils.h  computerphile_sort.c  function_wrapper_gate.c  fw_regex.c  line_processor.c  novaprova.c  oscillators.c  prell.c  print_entities.c  type_sizes.c  usecases.c  usecases.h
experiment/usecases/incoming/: gc.c  go_idle.c  overproducer_loop.c  sup_ports.c  unload_shared.c
java-bindings/src/eu/logxcontroll/: FullSignalType.java  Gate.java  GateBehavior.java  JavaBridgeGate.java  LogxControll.cpp  LogxControll.java  LogxControllException.java  LxcLibraryTreeNode.java  LxcValue.java  NativeObject.java  PortManager.java  Signal.java  Tokenport.java  Wire.java  Workspace.java
java-bindings/src/eu/logxcontroll/java/: LogxControllCallback.java  LogxControllDebugCallback.java
java-bindings/src/eu/logxcontroll/test/: FileTree.java  LibraryTree.java  Test.java
module/logic/: lxc_bool_gates.c  lxc_bool_gates.h
module/sound/: libao.c  libao.h
posix/: .gitignore  CMakeLists.txt  create_utils.c  fd_io.c  fd_open.c  liblxc_posix.c  liblxc_posix.h  socket_bring_up.c  socket_create.c  socketaddress_create.c
test-core/: pth-cond.supp  pthread-leakage.supp  test_build.c  test_cdll.c  test_collection_queue.c  test_core.h  test_threads.c  test_utilities.c  test_wire.c  test_worker_pool.c
tools/cmake/: FindPCRE.cmake  cmake_generate_test_from_novaprova_exec_build.sh  code_all_in_one.sh
tools/dotgraph/: render.sh
tools/template/: gate_skel.html
